# project-inoculum

./: .gitignore  Cargo.toml  LICENSE  README.md  database_setup.surql  docker-compose.yml
database_persistance/inoculum.db/: 000016.sst  IDENTITY  MANIFEST-000013  OPTIONS-000007
src/: main.rs
src/commands/: end_dough.rs  feeding_history.rs  log_feed.rs  mod.rs  start_dough.rs  update_dough.rs
src/database/: connection.rs  models.rs
