[package]
name = "project-inoculum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
clap = { version = "4.5.51", features = ["derive"] }
dotenvy = "0.15.7"
faker_rand = "0.1.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = "2.3.10"
thiserror = "2.0.17"
time = "0.3.44"
tokio = "1.48.0"
