[package]
name = "project-inoculum"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
comfy-table = "7.2.1"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = "2.4.0"
thiserror = "2.0.17"
tokio = "1.48.0"
